# small-llm-research-agent

./: .gitignore  README.md  main.py  pyproject.toml
chroma/: chroma.sqlite3
research_agent/: config.py  graph.py  main.py
research_agent/agent/: evaluator.py  memory.py  orchestrator.py  planner.py  researcher.py  tools.py
research_agent/chroma/: chroma.sqlite3
research_agent/data/: memory.json
research_agent/services/: fetch_paper.py  vectorstore.py  web_search.py
tests/: test_agent.py
